adder working contact form & CV link, changed some colors

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <li><i class="fa-brands fa-github fa-xl" style="color: #B197FC;"></i> <a href="https://github.com/arrenkae">GitHub</a></li>
                     <li><i class="fa-brands fa-linkedin fa-xl" style="color: #B197FC;"></i> <a href="https://www.linkedin.com/in/arrenkae">LinkedIn</a></li>
                     <li><i class="fa-solid fa-envelope fa-xl" style="color: #B197FC;"></i> <a href="mailto:stokely@slayers.ru?subject=Port">Email</a></li>
+                    <li><i class="fa-solid fa-file fa-xl" style="color: #B197FC;"></i> <a href="https://docs.google.com/document/d/e/2PACX-1vRPO63l62nOtQfSxnAsGEaB064wLqS-mir-m5yVal8SKGAtewvUAHGUWomfXc7jLg/pub">CV</a></li>
                 </ul>
             </aside>
             <section id="about">
@@ -70,7 +71,7 @@
                         <i class="fa-brands fa-node-js fa-2xl"></i>
                         <i class="fa-brands fa-react fa-2xl"></i>
                     </div>
-                    <a href="https://github.com/arrenkae/my-media-library">github</a>
+                    <a href="https://github.com/arrenkae/my-media-library">GitHub</a>
                 </div>
                 <div class="container_project">
                     <h3>Don't Worry, Be Happy: Mood and stress tracker</h3>
@@ -81,24 +82,24 @@
                         <i class="fa-solid fa-database fa-2xl"></i>
                         <i class="fa-brands fa-node-js fa-2xl"></i>
                     </div>
-                    <a href="https://github.com/arrenkae/moodtracker">github</a>
+                    <a href="https://github.com/arrenkae/moodtracker">GitHub</a>
                 </div>
             </section>
         </article>
         
         <article id="contact">
             <h2>Contact me</h2>
-            <form action="#" id="contactme">
-                <input type="text" id="name" name="name" placeholder="Your Name"><br>
-                <input type="email" id="email" name="email" placeholder="Your Email"><br>
-                <textarea id="message" name="message" placeholder="Your Message" rows="5" cols="60">
-            </form> 
+            <form target="_blank" id="contactme" action="0afdca36e5d0a7cdad51a77dcbeec10b" method="POST">
+                <div class="contact-id">
+                    <input type="text" id="name" name="name" placeholder="Your Name" required>
+                    <input type="email" id="email" name="email" placeholder="Your Email" required>
+                </div>
+                <textarea id="message" name="message" placeholder="Your Message" rows="5" cols="60" required></textarea>
+                <button type="submit" id="submit-button">Send</button>
+            </form>
         </article>
 
     </main>
 
-    <footer>
-        <p>(c) 2023</p>
-    </footer>
 </body>
 </html>
