added demo links and new media library screenshot

--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
                         <i class="fa-brands fa-node-js fa-2xl"></i>
                         <i class="fa-brands fa-react fa-2xl"></i>
                     </div>
-                    <a href="https://github.com/arrenkae/my-media-library">GitHub</a>
+                    <p class="project-links">
+                        <a href="https://my-media-library.onrender.com">Demo</a> | <a href="https://github.com/arrenkae/my-media-library">GitHub</a>
+                    </p>
                 </div>
                 <div class="container_project">
                     <h3>Don't Worry, Be Happy: Mood and stress tracker</h3>
@@ -82,7 +84,9 @@
                         <i class="fa-solid fa-database fa-2xl"></i>
                         <i class="fa-brands fa-node-js fa-2xl"></i>
                     </div>
-                    <a href="https://github.com/arrenkae/moodtracker">GitHub</a>
+                    <p class="project-links">
+                        <a href="https://moodtracker-g5ep.onrender.com">Demo</a> | <a href="https://github.com/arrenkae/moodtracker">GitHub</a>
+                    </p>
                 </div>
             </section>
         </article>
