--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <i class="fa-brands fa-node-js fa-2xl"></i>
                     </div>
                     <p class="project-links">
-                        <a href="https://moodtracker-g5ep.onrender.com">Demo</a> | <a href="https://github.com/arrenkae/moodtracker">GitHub</a>
+                        <a href="https://github.com/arrenkae/moodtracker">GitHub</a>
                     </p>
                 </div>
             </section>
