updated project preview

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="container_project">
                     <h3>My Media Library</h3>
                     <img src="media/project-previews/project-media-library.jpg" alt="preview_project2">
-                    <p>A React/Node.js app for creating and maintaining a personal library of tv shows, movies and books. Fething data from multiple APIs, it allows the user to keep track of what they are watching and reading, give ratings and sort their library.</p>
+                    <p>A React/Node.js app for creating and maintaining a personal library of tv shows, movies, books and games. Fething data from multiple APIs, it allows the user to keep track of what they are watching and reading, give ratings and sort their library.</p>
                     <div class="project-icons">
                         <i class="fa-brands fa-js fa-2xl"></i>
                         <i class="fa-solid fa-database fa-2xl"></i>
