changed email and text

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
                 <ul class="sidebar-links">
                     <li><i class="fa-brands fa-github fa-xl" style="color: #B197FC;"></i> <a href="https://github.com/arrenkae">GitHub</a></li>
                     <li><i class="fa-brands fa-linkedin fa-xl" style="color: #B197FC;"></i> <a href="https://www.linkedin.com/in/arrenkae">LinkedIn</a></li>
-                    <li><i class="fa-solid fa-envelope fa-xl" style="color: #B197FC;"></i> <a href="mailto:stokely@slayers.ru?subject=Port">Email</a></li>
+                    <li><i class="fa-solid fa-envelope fa-xl" style="color: #B197FC;"></i> <a href="mailto:stokely@ninamori.org?subject=Port">Email</a></li>
                     <li><i class="fa-solid fa-file fa-xl" style="color: #B197FC;"></i> <a href="https://docs.google.com/document/d/e/2PACX-1vRPO63l62nOtQfSxnAsGEaB064wLqS-mir-m5yVal8SKGAtewvUAHGUWomfXc7jLg/pub">CV</a></li>
                 </ul>
             </aside>
             <section id="about">
                 <h2>About me</h2>
-                    <p>Starting my journey in the wonderful world of software development. Having experience in both creative and technical fields, I am passionate about creating things that work efficiently and look nice, as well as solving complex logical problems along the way. After finishing a full stack development bootcamp, I am now working on personal projects, keep on learning new things and looking for new opportunities to challenge myself and apply my knowledge.</p>
+                    <p>Junior full stack developer looking for new career opportunities. Having experience in both creative and technical fields, I am passionate about creating things that work efficiently and look nice, as well as solving complex logical problems along the way. After completing a full stack development bootcamp and internship in a web development company, I am now working on personal projects, keep on learning new things and exploring new ways to challenge myself and apply my knowledge.</p>
                     <div class="container_lists">
                         <section id="skills">
                             <ul>
@@ -51,6 +51,7 @@
                                 <li>Node.js</li>
                                 <li>React</li>
                                 <li>Redux</li>
+                                <li>Next.js</li>
                             </ul>
                         </section>
                     </div>
