changed email and text

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <ul class="sidebar-links">
                     <li><i class="fa-brands fa-github fa-xl" style="color: #B197FC;"></i> <a href="https://github.com/arrenkae">GitHub</a></li>
                     <li><i class="fa-brands fa-linkedin fa-xl" style="color: #B197FC;"></i> <a href="https://www.linkedin.com/in/arrenkae">LinkedIn</a></li>
-                    <li><i class="fa-solid fa-envelope fa-xl" style="color: #B197FC;"></i> <a href="mailto:stokely@ninamori.org?subject=Port">Email</a></li>
+                    <li><i class="fa-solid fa-envelope fa-xl" style="color: #B197FC;"></i> <a href="mailto:stokely@ninamori.org?subject=Portfolio">Email</a></li>
                     <li><i class="fa-solid fa-file fa-xl" style="color: #B197FC;"></i> <a href="https://docs.google.com/document/d/e/2PACX-1vRPO63l62nOtQfSxnAsGEaB064wLqS-mir-m5yVal8SKGAtewvUAHGUWomfXc7jLg/pub">CV</a></li>
                 </ul>
             </aside>
